# trie-exploration

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  PLSREADME.txt  PLS_READ_ME.txt  README.md  STYLEGUIDES.txt  build.sh  debug_memory.sh  feedback.md  memory.ms  run.sh
benchmarks/: benchmarks.c
data/: README.md  benchmarks.txt  benchmarks_add.txt  benchmarks_afbrm.txt  benchmarks_afbsfbrm.txt  benchmarks_afbsfbrm_splay.txt  download.sh
extra/: .editorconfig  .gitignore  :w  analysis.ipynb  analysis.py  bib.ref  build.sh  code_to_groff.sh  macros.troff  report.ms  verslag.ms  verslag.ps
extra/.ipynb_checkpoints/: analysis-checkpoint.ipynb
extra/groff_code/: arraytrie.c  at_struct.ms
extra/images/: add_comparison.eps  array_all.eps  benchmarks_add.eps  benchmarks_afbrm.eps  custom_all.eps  mem_comparison.eps  mix_comparison.eps  remove_comparison.eps  reoccuring_comparison.eps  search_comparison.eps  ternary_all.eps  tsst.eps
include/: arraytrie.h  arraytrie_extended.h  customtrie.h  customtrie_extended.h  ternarytrie.h  ternarytrie_extended.h
src/: :w  ]  ansii_esc_codes.c  arraytrie.c  base.c  base.h  benchmark.c  customtrie.c  dataset.c  main.c  statistics.c  ternarytrie.c  tests.c  tests_arrt.c  tests_ct.c  tests_tst.c  testutils.c  trie.c  trie_custom.c  utils.c  utils.h
src/base/: ansii_esc_codes.c  base.c  m_arena.c  m_pool.c  string.c  testutils.c  utils.c
test/: base.h  test.h  test_arraytrie.c  test_customtrie.c  test_ternarytrie.c
tests/: tests.c  testutils.c
utils/: ansii_esc_codes.h  dataset.c  trie.c  utils.c
(+13 files in other folders)
